# femtoc-rust

./: Cargo.toml
pack-derive/: Cargo.toml
pack-derive/src/: lib.rs
resources/spec/: arrays.fm  loops.fm  primitives.fm
resources/test/: toplevel.fm
src/: ast.rs  errors.rs  extra.rs  fmt.rs  lex.rs  main.rs  mir.rs  parse.rs  util.rs
src/ast/: parser.rs
src/fmt/: syntax_errors.rs
src/mir/: integer_literal.rs  reduction.rs  scope.rs
src/util/: extra.rs  interner.rs  soap.rs
