[package]
name = "femtoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
pack-derive = { version = "0.1.0", path = "pack-derive" }
phf = { version = "0.11", features = ["macros"] }
bumpalo = { version = "3.13", features = ["collections"] }
